# custom_logger_aws

./: README.md  pyproject.toml
src/custom_logger_aws_BASANT_BABU_BHANDARI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_custom_logger.py  test_environments.py  test_log_utils.py
